# open-autonomous-research-lab

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  lint_check.py  lint_errors.txt  mypy_clean_errors.txt  mypy_output.txt  mypy_output_final.txt  parsed_mypy.txt  pyproject.toml  ruff_errors.json  ruff_output.txt
.github/workflows/: ci.yml
backlog/: tasks.md
benchmarks/: runner.py
datasets/: customer_churn.csv  housing_prices.csv  sales_forecasting.csv
docs/: architecture.md  beginner_guide.md  developer_guide.md
scripts/: create_marketplace.py  generate_datasets.py  generate_skills.py  validate_skills.py
skills_marketplace/: __init__.py
skills_marketplace/plugins/data_quality_scorer/: SKILL.md  __init__.py
skills_marketplace/plugins/image_feature_extractor/: SKILL.md  __init__.py
skills_marketplace/plugins/model_explainer/: SKILL.md  __init__.py
skills_marketplace/plugins/sentiment_analyzer/: SKILL.md  __init__.py
skills_marketplace/plugins/text_classifier/: SKILL.md  __init__.py
spec/: platform_spec.md
src/: __init__.py
src/agents/: __init__.py  data_engineer.py  data_scientist.py  evaluation_agent.py  infrastructure_agent.py  knowledge_manager.py  ml_engineer.py  orchestrator.py  planner.py  research_analyst.py
src/agents/base/: __init__.py  agent.py  communication.py  registry.py  types.py
src/api/: main.py
src/api/routes/: __init__.py  datasets.py  health.py  workflows.py
src/config/: __init__.py  settings.py
src/evaluation/: framework.py
src/mcp_servers/base/: server.py
src/mcp_servers/database/: server.py
src/mcp_servers/dataset_registry/: server.py
src/mcp_servers/filesystem/: server.py
src/memory/: __init__.py  experiment_archive.py  knowledge_base.py  vector_store.py
src/observability/: __init__.py  logger.py
src/skills/: __init__.py
src/skills/base/: __init__.py  (+2 more)
src/ui/: app.py
synthetic_data/: generator.py
tests/: __init__.py  test_agents.py  test_mcp_servers.py  test_skills.py
(+195 files in other folders)
