[project]
name = "oarl"
version = "0.1.0"
description = "Open Autonomous Research Lab — A multi-agent AI platform for autonomous data analysis, ML experimentation, and research discovery."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "OARL Contributors" }]
keywords = ["ai-agents", "machine-learning", "autonomous-research", "mcp", "data-science"]

dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "streamlit>=1.35,<2",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "xgboost>=2.0,<3",
    "lightgbm>=4.3,<5",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<1",
    "plotly>=5.22,<6",
    "mlflow>=2.13,<3",
    "httpx>=0.27,<1",
    "structlog>=24.1,<25",
    "rich>=13.7,<14",
    "jinja2>=3.1,<4",
    "scipy>=1.13,<2",
    "statsmodels>=0.14,<1",
    "openpyxl>=3.1,<4",
    "pyarrow>=16,<18",
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
vector = [
    "chromadb>=0.5,<1",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
]

[project.urls]
Homepage = "https://github.com/oarl/open-autonomous-research-lab"
Documentation = "https://github.com/oarl/open-autonomous-research-lab/tree/main/docs"
Repository = "https://github.com/oarl/open-autonomous-research-lab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
